[package]
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
plate = { path = "../plate" }
winit = "0.27"
vk-shader-macros = "0.2"
glam = "0.21"
image = "0.24"
memoffset = "0.6"

[[example]]
name = "triangle"
path = "triangle.rs"

[[example]]
name = "vert_buffer"
path = "vert_buffer.rs"

[[example]]
name = "index_buffer"
path = "index_buffer.rs"

[[example]]
name = "uniform_buffer"
path = "uniform_buffer.rs"

[[example]]
name = "texture"
path = "texture.rs"

[[example]]
name = "camera"
path = "camera.rs"
