[package]
name = "plate-macros"
version = "0.1.0"
edition = "2021"
description = "Macros to use with the plate crate"
repository = "https://github.com/pcasotti/plate"
license = "MIT"
readme = "../README.md"
keywords = ["graphics", "rendering", "vulkan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
