[package]
name = "plate"
version = "0.1.0"
edition = "2021"
description = "Rust library for writing simpler Vulkan code"
repository= "https://gitlab.com/pcasotti/plate"
license = "MIT"
keywords = ["graphics", "rendering", "vulkan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37", features = ["linked"] }
winit = "0.26"
ash-window = "0.10"
vk-shader-macros = "0.2"
thiserror = "1.0"
bitflags = "1.3"
glam = "0.21"
memoffset = "0.6"
tobj = "3.2"
