[package]
name = "plate"
version = "0.5.0"
edition = "2021"
description = "Rust library for writing simpler Vulkan code"
repository = "https://github.com/pcasotti/plate"
license = "MIT"
readme = "../README.md"
keywords = ["graphics", "rendering", "vulkan"]

[features]
default = ["macros"]
macros = ["dep:plate-macros", "dep:memoffset"]

[dependencies]
ash = { version = "0.37", features = ["linked"] }
winit = "0.27"
ash-window = "0.11"
vk-shader-macros = "0.2"
thiserror = "1.0"
bitflags = "1.3"
memoffset = { version = "0.6", optional = true }
plate-macros = { version = "0.1", path = "../plate-macros", optional = true }
